# smt

./: 201909_HA.cfg  202003_FO.cfg  BUILD.sh  BUILD.txt  MANIFEST.in  README.md  TEX.py  config.cfg  dossier.py  itime3.py  planner.py  server.py  setup.cfg  setup.py
dcs/: DBmodels.cfg  DBmodels.py  DCS.py  FAOR.py  MIS.py  OBSSEARCH.py  POS.py  cache.py  getAOR.py  models.cfg  models.py  refresh.py
doc/: conf.py  index.rst
dossier/: CMap.py  MSX.py  TEX.py  dossier.py  itime3.py  planner.py  template.tex
fifi/: SCT.py  obsgen.py  obsmaker.cfg
old/: DCS.old.py  models_old.py
old/dcs_old/: AOR.py  AORSEARCH.py  DCS.py  DETAILS.py  MIS.py  OBS.py  OBSSEARCH.py  POS.py  STATUS.py
pdflatex/: pdflatex.py
webdossier/: server.cfg  server.py
