[metadata]
name = sof-dossier
project = SOFIA Dossier Tool
version = 1.3.0
author = Michael S. Gordon
author_email = msgordon.astro@gmail.com
description = Generate SOFIA dossiers from mission and flight IDs.

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    astropy
    Cython
    requests
    beautifulsoup4
    peewee
    blessings
    numpy
    pandas
    mechanicalsoup
    scipy
    urlpath
    matplotlib
    regions
    lxml
    aplpy>2
    astroquery
    shapely
    pylatexenc
    eel

[options.package_data]
* = *.tex,*.cfg

[options.entry_points]
console_scripts =
    sof-dossier = dossier.dossier:main
    sof-planner = dossier.planner:main
    sof-itime = dossier.itime3:main

[build_sphinx]
project = SOFIA Dossier Tool
version = 1.3.0
release = 1.3.0

[bdist_wheel]
universal=1

[sdist]
formats=gztar,zip