[metadata]
name = sof-dossier
project = SOFIA Dossier Tool
version = 1.3.9
author = Michael S. Gordon
author_email = msgordon.astro@gmail.com
description = Generate SOFIA dossiers from mission and flight IDs.

[options]
zip_safe = False
include_package_data = True
packages = find:
dependency_links = git+https://github.com/darioflute/obsmaker#egg=obsmaker
install_requires =
    astropy
    Cython
    requests
    beautifulsoup4
    peewee
    blessings
    numpy
    pandas
    mechanicalsoup
    scipy
    urlpath
    matplotlib
    regions
    lxml
    aplpy>2
    astroquery
    shapely
    pylatexenc
    eel
    obsmaker
    PyQt5

[options.package_data]
* = *.tex,*.cfg

[options.entry_points]
console_scripts =
    sof-dossier = dossier.dossier:main
    sof-planner = dossier.planner:main
    sof-itime = dossier.itime3:main
    sof-refresh = dcs.refresh:main
    sof-obsmaker = fifi.obsgen:main
    sof-aor = dcs.getAOR:main
    aor2faor = dcs.FAOR:main

[build_sphinx]
project = SOFIA Dossier Tool
version = 1.3.9
release = 1.3.9

[bdist_wheel]
universal=1

[sdist]
formats=gztar,zip