[metadata]
name = sof-dossier
project = SOFIA Dossier Tool
version = 1.5.5
author = Michael S. Gordon
author_email = msgordon.astro@gmail.com
description = Generate SOFIA dossiers from mission and flight IDs.

[options]
zip_safe = False
include_package_data = True
packages = find:
dependency_links = git+https://github.com/darioflute/obsmaker#egg=obsmaker
install_requires =
    astropy
    Cython
    requests
    beautifulsoup4
    jinja2
    bottle
    peewee
    blessings
    numpy
    pandas
    mechanicalsoup
    scipy
    urlpath
    matplotlib
    regions
    lxml
    aplpy>2
    astroquery
    shapely
    pylatexenc
    eel
    obsmaker
    gevent-websocket

[options.package_data]
* = *.tex,*.cfg

[options.entry_points]
console_scripts =
    sof-dossier = dossier.dossier:main
    sof-planner = dossier.planner:main
    sof-itime = dossier.itime3:main
    sof-refresh = dcs.refresh:main
    sof-obsmaker = fifi.obsgen:main
    sof-aor = dcs.getAOR:main
    aor2faor = dcs.FAOR:main
    sof-cache = dcs.cache:main

[build_sphinx]
project = SOFIA Dossier Tool
version = 1.5.5
release = 1.5.5

[bdist_wheel]
universal=1

[sdist]
formats=gztar,zip